@@ -1,8 +1,11 @@
 #!@PYTHON@ -O
-
-import sys, os, time, signal
-from optparse import OptionParser, OptionValueError
+# vim: noet :
+import os
 import re
+import signal
+import sys
+import time
+from optparse import OptionParser, OptionValueError
 
 # for an explanation on this logic, see pym/_emerge/__init__.py
 import os
@@ -14,6 +17,7 @@ else:
 import portage
 
 import portage.const, portage.exception, portage.output
+
 class WorldHandler(object):
 
 	def name():
@@ -450,7 +454,7 @@ def emaint_main(myargv):
 	usage+= "tools and provide a single interface to system health checks."
 
 
-	parser = OptionParser(usage=usage)
+	parser = OptionParser(usage=usage, version=portage.VERSION)
 	parser.add_option("-c", "--check", help="check for problems",
 		action="callback", callback=exclusive, callback_kwargs={"var":"action"})
 	parser.add_option("-f", "--fix", help="attempt to fix problems",
