@@ -50,7 +50,7 @@ get_date_part() {
 	local utc_time_in_secs="$1"
 	local part="$2"
 
-	if	[[ ${USERLAND} == BSD ]] || ; then
+	if	[[ ${USERLAND} == BSD ]] ; then
 		date -r ${utc_time_in_secs} -u +"${part}"
 	else
 		date -d @${utc_time_in_secs} -u +"${part}"
