@@ -406,7 +406,7 @@ install_qa_check() {
 				*) abort="yes";;
 			esac
 		fi
-		if [[ ${abort} == "yes" ]] || ; then
+		if [[ ${abort} == "yes" ]] ; then
 			echo "Please do not file a Gentoo bug and instead" \
 			"report the above QA issues directly to the upstream" \
 			"developers of this software." | fmt -w 70 | \
