@@ -1701,7 +1701,7 @@ class dblink(object):
 			try:
 				s = os.lstat(path)
 			except OSError, e:
-				if e.errno != errno.ENOENT:
+				if e.errno not in (errno.ENOENT, errno.ENOTDIR):
 					raise
 				del e
 				continue
